# holochain-tracing

./: .gitignore  CHANGELOG-UNRELEASED.md  CHANGELOG.md  Cargo.toml  README.md  TODO.md  config.nix
.circleci/: config.yml
crates/tracing/: Cargo.toml  README.md
crates/tracing/src/: channel.rs  lib.rs  prelude.rs  span.rs  span_context.rs  span_wrap.rs  stack.rs  structured.rs  tag.rs  tracer_console.rs  tracer_network.rs  tracing.rs  tracing_macros.rs  utils.rs
crates/tracing/src/tracing/: jaeger_layer.rs  mod.rs
crates/tracing/tests/: integration.rs
crates/tracing_macros/: Cargo.toml  README.md  tmp.rs
crates/tracing_macros/src/: autotrace.rs  lib.rs  newrelic_trace.rs  start_trace.rs
crates/tracing_macros/tests/: macros.rs
src/: lib.rs  span.rs  span_map.rs  tracer_console.rs  tracer_jaeger.rs  tracer_network.rs
tests/: jaeger_report.rs
