[package]
name = "holochain_tracing"
version = "0.0.20"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "abstraction for distributed tracing choices"
keywords = ["holochain", "holo", "tracing"]
categories = ["development-tools::debugging", "development-tools::profiling", "development-tools::testing"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_tracing"
repository = "https://github.com/holochain/holochain-tracing"

[[bin]]
name = "jaeger-report-tester"
path = "bin/test_network_reporter.rs"

[dependencies]
crossbeam-channel = "=0.3.8"
lazy_static = "=1.4.0"
rustracing = "=0.2.1"
rustracing_jaeger = "=0.2.1"
shrinkwraprs = "0.3.0"
log = "0.4.8"
backtrace = "0.3.27"
serde = "=1.0.104"
serde_derive = "=1.0.104"
serde_json = "=1.0.47"
opentelemetry-jaeger = "0.1.0"
opentelemetry = { version = "0.2.0", features = ["serialize"] }
tracing = "0.1.13"
tracing-opentelemetry = { git = "https://github.com/freesig/tracing-opentelemetry.git", branch = "holochain" }
tracing-subscriber = "0.2.1"
tracing-serde = "=0.1.0"
tracing-core = "=0.1.10"
chrono = "=0.4.6"