[package]
name = "holochain_tracing_macros"
version = "0.0.14"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
edition = "2018"
description = "abstraction for distributed tracing choices"
keywords = ["holochain", "holo", "tracing"]
categories = ["development-tools::debugging", "development-tools::profiling", "development-tools::testing"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/holochain_tracing"
repository = "https://github.com/holochain/holochain-tracing"

[lib]
proc-macro = true

[dependencies]
holochain_tracing = { version = "=0.0.13", path = "../tracing"}
syn = { version = "1.0.8", features = ["full", "fold"] }
quote = "1.0.2"
crossbeam-channel = "=0.3.8"
log = "0.4.8"
newrelic = "0.2"
lazy_static = "=1.4.0"

[dev-dependencies]

